Adicinando a pasta src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo:wght@400;900&display=swap" />
 
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
   <body>
     <main>
@@ -29,14 +29,18 @@
 
       <footer>
         <div class="social-buttons">
-          <a href="https://twitter.com/gustavo_hsn" target="_blank" rel="noopener noreferrer"><i class="nes-icon twitter"></i> </a>
           <a href="https://www.facebook.com/gustavo.nascimento.77920" target="_blank" rel="noopener noreferrer"><i class="nes-icon facebook"></i> </a>
           <a href="https://www.linkedin.com/in/gustavo-nasicmento-2039aa22/" target="_blank" rel="noopener noreferrer"><i class="nes-icon linkedin"></i> </a>
           <a href="https://github.com/FFantasma" target="_blank" rel="noopener noreferrer"><i class="nes-icon github"></i> </a>
+          <a href="https://www.instagram.com/gustavohsantosn/" target="_blank" rel="noopener noreferrer"><i class="nes-icon instagram"></i> </a>
         </div>
+        <p>
+          <span>@2020</span>
+          <a href="https://twitter.com/gustavo_hsn" target="_blank" rel="noopener noreferrer">@gustavo_hsn</a>
+        </p>
       </footer>
     </main>
 
-    <script src="./scripts.js"></script>
+    <script src="./src/script/scripts.js"></script>
   </body>
 </html>
