--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       </footer>
     </main>
 
-    <script src="../public/scripts/scripts.js"></script>
+    <script src="../public/scripts/script.js"></script>
   </body>
 </html>
