--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bitter&family=Heebo:wght@400;900&display=swap" />
 
-    <link rel="stylesheet" href="../public/css/styles.css" />
+    <link rel="stylesheet" href="./public/css/styles.css" />
   </head>
   <body>
     <main>
@@ -41,6 +41,6 @@
       </footer>
     </main>
 
-    <script src="../public/scripts/script.js"></script>
+    <script src="./public/scripts/script.js"></script>
   </body>
 </html>
