Retirada de algumas frases

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </header>
 
         <p class="frase">
-          
+          Motivação
         </p>
      
       <button class="nes-btn is-success" type="button" onclick="gerarAleatorio()">Motive-se</button>
